crates/trust-cg-test/tests/snapshots/cli__bootstrap_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"bootstrap\"])"
---
Planned rustc bootstrap driver (WS5).

This command is not implemented in trust-cg 0.1.0. It exits 2 without invoking `x.py`, reading a
rustc checkout, or writing a result artifact. Its options are reserved for a future release.

Usage: trust-cg-test bootstrap [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

      --stage <N>
          Planned rustc bootstrap stage; ignored in v0.1.0

          [default: 1]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --rustc-src <PATH>
          Planned rustc source checkout; not read in v0.1.0

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
