crates/trust-cg-test/tests/snapshots/cli__lint_linux_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"lint-linux\"])"
---
Cross-compile check for the Linux `#[cfg(target_os = "linux")]` paths in trust-cg-codegen. Runs
`cargo check --target <T> -p <P>` for each installed Linux target. Missing targets are skipped (they
are environmental, not a failure) so this subcommand is safe to wire into CI on macOS-only developer
boxes.

Installed targets are discovered via `rustup target list --installed`. Install one with e.g. `rustup
target add x86_64-unknown-linux-gnu`.

Exit codes:
  0 — every installed target compiled (or all targets skipped).
  1 — at least one installed target failed to compile.
  2 — cargo missing from PATH.

# Examples

  trust-cg-test lint-linux
  trust-cg-test lint-linux --format json
  trust-cg-test lint-linux --target x86_64-unknown-linux-gnu
  trust-cg-test lint-linux --package trust-cg-codegen --package trust-cg-ir

Usage: trust-cg-test lint-linux [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

      --target <TRIPLE>
          Override the target triple(s) to check. Defaults to the two Linux triples we care about.
          Repeatable

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --package <PACKAGE>
          Package(s) to check. Defaults to `trust-cg-codegen`. Repeatable

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
