crates/trust-cg-test/tests/snapshots/cli__prove_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"prove\"])"
---
Planned AY lowering-obligation dispatcher (WS7).

This command is not implemented in trust-cg 0.1.0. It exits 2 without invoking AY, reading a proof
cache, or writing a result artifact. Its options are reserved for a future release.

Usage: trust-cg-test prove [OPTIONS]

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

      --width <WIDTH>
          Planned proof bitwidth; ignored in v0.1.0

          Possible values:
          - w8:         8-bit
          - w16:        16-bit
          - w32:        32-bit
          - w64:        64-bit
          - parametric: Parametric width (BV theory)

          [default: w8]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --obligation <GLOB>
          Planned obligation-name filter; ignored in v0.1.0

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --timeout-per-query <SECS>
          Planned per-query timeout; ignored in v0.1.0

          [default: 120]

      --cache-dir <PATH>
          Planned proof-cache directory; not read in v0.1.0

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
