crates/trust-cg-test/tests/snapshots/cli__ratchet_help.snap
---
source: crates/trust-cg-test/tests/cli.rs
expression: "help_of(&[\"ratchet\"])"
---
Run ratchet checks (called by CI). Every ratchet fails with a non-zero exit code when its invariant
is violated.

# Examples

  trust-cg-test ratchet shell-isolation
  trust-cg-test ratchet schema --format json
  trust-cg-test ratchet tests --baseline path/to/tests-baseline.json
  trust-cg-test ratchet warnings
  trust-cg-test ratchet unwrap
  trust-cg-test ratchet lint-linux

Usage: trust-cg-test ratchet [OPTIONS] <COMMAND>

Commands:
  tests            Pass-count regression check against a caller-supplied baseline
  warnings         Warnings-zero ratchet — builds the workspace + tests and compares the diagnostic
                   count against `ratchet/warnings_baseline.json`
  unwrap           Monotonic-decrease ratchet on production panic-family sites (`.unwrap()` /
                   `.expect(` / `panic!` / `unreachable!` / `todo!`). Compares per-file counts
                   against `ratchet/unwrap_baseline.json`
  panic-clippy     Baseline-aware clippy gate for production panic-family diagnostics
  shell-isolation  Enforce `std::process::Command` is only used in `shell.rs` / `external.rs`
  schema           Assert committed `evals/schema/*.json` matches what schemars emits
  lint-linux       Cross-compile check for `#[cfg(target_os = "linux")]` paths in `trust-cg-codegen`
                   (issue #346). Safe on macOS-only boxes — targets not installed via `rustup target
                   add` are reported as `skipped`
  help             Print this message or the help of the given subcommand(s)

Options:
  -f, --format <FORMAT>
          Output format (human, json, junit)

          Possible values:
          - human: Pretty table + narrative, targeted at humans
          - json:  Machine-readable JSON
          - junit: JUnit XML for CI consumers

          [default: human]

  -o, --out <PATH>
          Override the command-specific output file or directory.

          See the selected subcommand's help for its output type and default.

      --timeout <SECS>
          Per-unit timeout in seconds. Subcommands may apply per-unit defaults when this is unset

      --parallel <N>
          Worker count (honors cargo-serialization lock). Default: auto

  -q, --quiet
          Suppress progress bars; errors still go to stderr

  -v, --verbose...
          Show debug-level events. Repeat for more: -vv, -vvv

      --no-cache
          Ignore proof / corpus caches

      --dry-run
          Print what would run without executing external tools

  -h, --help
          Print help (see a summary with '-h')
